--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "publishPage": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
-  "author": "",
+  "author": "NovaCat35",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.8.1",
